# ssmd

./: .gitignore  AGENT.md  CLAUDE.md  DEPLOYMENT.md  LICENSE  Makefile  README.md  TODO.md  build.zig  design.md  go.mod  priv.pem  ssmd.md
.claude-plugin/: marketplace.json
ssmd-mcp/: .env.example  .gitignore  README.md  pyproject.toml
ssmd-mcp/src/ssmd_mcp/: api.py  config.py  gcs.py  server.py  tools.py
ssmd-mcp/tests/: test_tools.py
ssmd-rust/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.harman  Dockerfile.test-exchange
ssmd-rust/.next/: trace  trace-build
ssmd-rust/crates/connector/: Cargo.toml
ssmd-rust/crates/connector/src/: error.rs  flusher.rs  lib.rs  message.rs  metrics.rs  nats_writer.rs  publisher.rs  resolver.rs  ring_buffer.rs  runner.rs  secmaster.rs  server.rs  traits.rs  websocket.rs  writer.rs
ssmd-rust/crates/connector/src/binance/: connector.rs  messages.rs  mod.rs  websocket.rs  writer.rs
ssmd-rust/crates/connector/src/kalshi/: auth.rs  cdc_consumer.rs  config.rs  connector.rs  messages.rs  mod.rs  shard_manager.rs  websocket.rs
ssmd-rust/crates/connector/src/kraken/: connector.rs  messages.rs  mod.rs  websocket.rs  writer.rs
ssmd-rust/crates/connector/src/kraken_futures/: connector.rs  messages.rs  mod.rs  websocket.rs  writer.rs
ssmd-rust/crates/connector/src/massive/: connector.rs  messages.rs  mod.rs  websocket.rs  writer.rs
ssmd-rust/crates/connector/src/polymarket/: connector.rs  market_discovery.rs  messages.rs  mod.rs  websocket.rs  writer.rs
ssmd-rust/crates/harman/: Cargo.toml
ssmd-rust/crates/harman-test-exchange/: Cargo.toml
ssmd-rust/crates/harman-test-exchange/src/: main.rs  routes.rs  state.rs
ssmd-rust/crates/harman/migrations/: 001_initial.sql  002_decimal_migration.sql  003_amend_decrease.sql  004_session_key_prefix.sql  005_order_groups.sql  006_session_environment.sql  007_session_risk.sql  008_environment_test.sql  009_stable_sessions.sql  010_settlements.sql  011_exchange_audit_log.sql  012_audit_event_id.sql  013_daily_loss_limit.sql  014_nullable_audit_session_id.sql  015_remove_filled_quantity.sql  016_valid_order_state.sql  017_price_monitor.sql  018_session_identity.sql  019_drop_exchange_check.sql
ssmd-rust/crates/harman/src/: audit.rs  db.rs  error.rs  exchange.rs  fill_processor.rs  lib.rs  order_importer.rs  risk.rs  settlement_compute.rs  settlement_recorder.rs  state.rs  test_helpers.rs  types.rs
ssmd-rust/crates/metadata/: Cargo.toml
ssmd-rust/crates/metadata/src/: environment.rs  error.rs  feed.rs  lib.rs
ssmd-rust/crates/middleware/: Cargo.toml
ssmd-rust/crates/middleware/src/: cache.rs  error.rs  factory.rs  journal.rs  latency.rs  lib.rs  lsn.rs  postgres_health.rs  redis_health.rs  storage.rs  transport.rs
ssmd-rust/crates/middleware/src/memory/: cache.rs  journal.rs  mod.rs  storage.rs  transport.rs
ssmd-rust/crates/middleware/src/nats/: mod.rs  subjects.rs  transport.rs
ssmd-rust/crates/middleware/tests/: nats_integration.rs
ssmd-rust/crates/schema/: Cargo.toml  build.rs
ssmd-rust/crates/schema/schemas/: trade.capnp  trade.capnp.c++  trade.capnp.h
ssmd-rust/crates/schema/src/: lib.rs
ssmd-rust/crates/ssmd-archiver/: Cargo.toml  Dockerfile  archiver-example.yaml
ssmd-rust/crates/ssmd-archiver/src/: config.rs  error.rs  lib.rs  main.rs  manifest.rs  manifest_io.rs  metrics.rs  parquet_writer.rs  server.rs  subscriber.rs  validation.rs  writer.rs
ssmd-rust/crates/ssmd-archiver/src/schema/: kalshi.rs  kraken.rs  kraken_futures.rs  mod.rs  polymarket.rs  regression_tests.rs
ssmd-rust/crates/ssmd-bar-cache/: Cargo.toml  Dockerfile
ssmd-rust/crates/ssmd-bar-cache/src/: agg.rs  config.rs  consumer.rs  main.rs  metrics.rs  store.rs
ssmd-rust/crates/ssmd-cache/: Cargo.toml  Dockerfile
ssmd-rust/crates/ssmd-cache/src/: cache.rs  config.rs  consumer.rs  error.rs  lib.rs  lifecycle.rs  main.rs  metrics.rs  reconcile.rs  warmer.rs
ssmd-rust/crates/ssmd-cdc/: Cargo.toml  Dockerfile
ssmd-rust/crates/ssmd-cdc/src/: config.rs  error.rs  lib.rs  main.rs  messages.rs  metrics.rs  publisher.rs  replication.rs
ssmd-rust/crates/ssmd-cdc/tests/: config_test.rs  integration_test.rs
ssmd-rust/crates/ssmd-connector/: Cargo.toml
ssmd-rust/crates/ssmd-connector/src/: main.rs
ssmd-rust/crates/ssmd-exchange-kalshi/: Cargo.toml
ssmd-rust/crates/ssmd-exchange-kalshi/src/: client.rs  lib.rs  types.rs
ssmd-rust/crates/ssmd-exchange-kalshi/tests/: demo_integration.rs
ssmd-rust/crates/ssmd-harman/: Cargo.toml
ssmd-rust/crates/ssmd-harman-ems/: Cargo.toml
ssmd-rust/crates/ssmd-harman-ems/src/: lib.rs  pump.rs  queue.rs  risk.rs  shutdown.rs
ssmd-rust/crates/ssmd-harman-ems/tests/: ems_tests.rs
ssmd-rust/crates/ssmd-harman-oms/: Cargo.toml
ssmd-rust/crates/ssmd-harman-oms/src/: event_ingester.rs  groups.rs  lib.rs  positions.rs  price_feed.rs  price_monitor.rs  reconciliation.rs  recovery.rs  runner.rs
ssmd-rust/crates/ssmd-harman-tui/: Cargo.toml
ssmd-rust/crates/ssmd-harman-tui/src/: app.rs  client.rs  event.rs  main.rs  types.rs  ui.rs
ssmd-rust/crates/ssmd-harman/src/: api.rs  lib.rs  main.rs  pump.rs  reconciliation.rs  recovery.rs  shutdown.rs  sweeper.rs
ssmd-rust/crates/ssmd-harman/tests/: crash_tests.rs  fill_integrity_tests.rs  group_fill_tests.rs  live_integration.rs  recovery_invariant_tests.rs
ssmd-rust/crates/ssmd-parquet-gen/: Cargo.toml  Dockerfile
ssmd-rust/crates/ssmd-parquet-gen/src/: catalog.rs  gcs.rs  main.rs  processor.rs
ssmd-rust/crates/ssmd-schemas/: Cargo.toml
ssmd-rust/crates/ssmd-schemas/src/: binance.rs  kalshi.rs  kraken.rs  kraken_futures.rs  lib.rs  massive.rs  polymarket.rs
ssmd-rust/crates/ssmd-settlement-snap/: Cargo.toml  Dockerfile
ssmd-rust/crates/ssmd-settlement-snap/src/: config.rs  consumer.rs  gcs.rs  lifecycle.rs  main.rs  metrics.rs  price.rs  reconcile.rs  record.rs  symbology.rs  ticker.rs
ssmd-rust/crates/ssmd-settlement-snap/tests/: integration.rs
ssmd-rust/crates/ssmd-snap/: Cargo.toml  Dockerfile
ssmd-rust/crates/ssmd-snap/src/: config.rs  main.rs  metrics.rs  snap.rs
(+764 files in other folders)
