[workspace]
resolver = "2"
members = [
    "crates/metadata",
    "crates/middleware",
    "crates/connector",
    "crates/ssmd-connector",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["ssmd contributors"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
url = "2"
clap = { version = "4", features = ["derive"] }
bytes = "1"
