[workspace]
resolver = "2"
members = [
    "crates/metadata",
    "crates/middleware",
    "crates/connector",
    "crates/ssmd-connector",
    "crates/schema",
    "crates/ssmd-archiver",
    "crates/ssmd-cdc",
    "crates/ssmd-cache",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["ssmd contributors"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
async-nats = "0.38"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
url = "2"
clap = { version = "4", features = ["derive", "env"] }
bytes = "1"
capnp = "0.19"
capnpc = "0.19"
quanta = "0.12"
dashmap = "6"
simd-json = "0.14"
lasso = { version = "0.7", features = ["multi-threaded"] }
arrayvec = "0.7"
memmap2 = "0.9"
bytemuck = { version = "1.14", features = ["derive"] }
once_cell = "1.19"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
postgres-types = { version = "0.2", features = ["derive"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
anyhow = "1"
