[package]
name = "ssmd-connector-lib"
version.workspace = true
edition.workspace = true

[dependencies]
ssmd-metadata = { path = "../metadata" }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tower = { workspace = true }
