[package]
name = "ssmd-connector-lib"
version.workspace = true
edition.workspace = true

[dependencies]
ssmd-metadata = { path = "../metadata" }
ssmd-middleware = { path = "../middleware" }
ssmd-schema = { path = "../schema" }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
capnp = { workspace = true }
simd-json = { workspace = true }
lasso = { workspace = true }
arrayvec = { workspace = true }
memmap2 = { workspace = true }
bytemuck = { workspace = true }
rsa = "0.9"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"

[dev-dependencies]
tempfile = { workspace = true }
tower = { workspace = true }
