[package]
name = "harman"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
deadpool-postgres = { workspace = true }
tokio-postgres = { workspace = true }
postgres-types = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
