[package]
name = "ssmd-middleware"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
async-nats = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
md5 = "0.7"
ssmd-metadata = { path = "../metadata" }
quanta = { workspace = true }
dashmap = { workspace = true }
lasso = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
