[package]
name = "ssmd-archiver"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "NATS to file archiver for SSMD market data"

[[bin]]
name = "ssmd-archiver"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
async-nats = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
flate2 = "1.0"
tokio-util = { version = "0.7", features = ["rt"] }

ssmd-middleware = { path = "../middleware" }

[dev-dependencies]
tempfile = { workspace = true }
