[package]
name = "ssmd-exchange-kalshi"
version.workspace = true
edition.workspace = true

[dependencies]
harman = { path = "../harman" }
ssmd-connector-lib = { path = "../connector" }
async-trait = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
rsa = "0.9"
sha2 = "0.10"
base64 = "0.22"
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
