[package]
name = "ssmd-harman-ems"
version.workspace = true
edition.workspace = true

[dependencies]
harman = { path = "../harman" }
deadpool-postgres = { workspace = true }
tokio-postgres = { workspace = true }
prometheus = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
