[package]
name = "ssmd-harman-oms"
version.workspace = true
edition.workspace = true

[dependencies]
harman = { path = "../harman" }
ssmd-harman-ems = { path = "../ssmd-harman-ems" }
deadpool-postgres = { workspace = true }
tokio-postgres = { workspace = true }
prometheus = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
