[package]
name = "ssmd-harman"
version.workspace = true
edition.workspace = true

[lib]
name = "ssmd_harman"
path = "src/lib.rs"

[[bin]]
name = "ssmd-harman"
path = "src/main.rs"

[dependencies]
harman = { path = "../harman" }
ssmd-harman-ems = { path = "../ssmd-harman-ems" }
ssmd-harman-oms = { path = "../ssmd-harman-oms" }
ssmd-exchange-kalshi = { path = "../ssmd-exchange-kalshi" }
ssmd-connector-lib = { path = "../connector" }
axum = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
deadpool-postgres = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
subtle = { workspace = true }
prometheus = { workspace = true }
tower = { workspace = true }
reqwest = { workspace = true }
dashmap = { workspace = true }
redis = { workspace = true }
sha2 = "0.10"
tower-http = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
reqwest = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
dashmap = { workspace = true }
ssmd-harman-ems = { path = "../ssmd-harman-ems" }
ssmd-harman-oms = { path = "../ssmd-harman-oms" }
prometheus = { workspace = true }
