[package]
name = "ssmd-settlement-snap"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Captures final snap + settlement outcome of each settled 15-minute Kalshi crypto market to GCS for model training"

[[bin]]
name = "ssmd-settlement-snap"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
async-nats = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
object_store = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
